styled about and contact pages

--- a/index.html
+++ b/index.html
@@ -5,37 +5,59 @@
         <meta name="author" content="Esteban Solis Loya"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Zorro and Tornado</title>
+        <link href="https://fonts.googleapis.com/css2?family=Esteban&family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/21fb92ea90.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
     <body>
         <header>
+<!---------------------------------Beginning of Nav------------------------------->
             <nav class="nav-bar">
-                <img class="logo" src="" alt=""/>
+                <img class="logo" src="img/logo.jpg" alt="Zorro logo"/>
                 <ul class="nav-list">
                     <li class="list-items"><a href="index.html" target="_blank">Home</a></li>
                     <li class="list-items"><a href="about.html" target="_blank">About</a></li>  
                     <li class="list-items"><a href="contact.html" target="_blank">Contact</a></li>
                 </ul>
             </nav>
+<!------------------------------------End of Nav------------------------------------>
         </header>
-        <main clss="banner">
+        <main class="banner">
             <img src="img/Zorro1.jpg"/>
-            <div>
-                <h1 class="heading">Zorro and Tornado</h1>
+            <div class="banner-box">
+                <h1 class="banner-text">Zorro and Tornado</h1>
             </div>
         </main>
-        <article></article>
-        <aside></aside>
-        <footer>
-            <div>
-                <button></button>
-                <input />
+<!------------------------------------End of Banner----------------------------------->
+        <section class="row">
+            <div class="column">
+                <div class="box col-box1">
+                    <img class="tornado" src="img/tornado.jpg" alt="Zorro and Tornado">
+                </div>
+                <div class="box col-box2">
+                    <img class="mistress" src="img/mistress.jpg" alt="Zorro and Tornado breaking into a library">
+                </div>
             </div>
-            <div>
-                <a></a>
-                <a></a>
+            <aside class="column">
+                <p>Zorro is a rad comic hero who has been the inspiration for myriads of films, media, comics, and even other mainstream sueprheroes. The creators of Batman, the superhero is cool but is obviously inferior to Spider-Man, drew inspiration from the Zorro character when designing and building Batman's superhero trope.
+                <br>
+                <br>Zorro had his trusty noble steed, Tornado, who helps in fighting crime and corruption in Spanish Colonial California while sometimes coming to Zorro's rescue. Tornado is trained to be summoned with a unique call from Zorro and, because of their strong bond, will stop at nothing to protect our caped crusader. Tornado serves as the precedent for vehicles and side-companions that many contemorary superheroes rely on, such as the Batmobile and Ghostrider's motorcycle.
+                <br>
+                <br>I'm not saying that Zorro is the best superhero - because the objective truth is that Spider-Man is the best, strongest, most powerful, and most handsomest and rad superhero in existence - but there is no question Zorro and Tornado have acted as foundational character tropes in American comic and pop culture.
+                </p>
+            </aside>
+        </section>
+        <!-----------------End of Rows-------------------->
+        <footer class="footer">
+            <div class="footer-col">
+                <button class="button">Submit</button>
+                <input class="input" type="text"/>
             </div>
-            <div>
+            <div class="footer-col">
+                <a href="https://twitter.com/yescabansolis" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/yescaban/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="footer-col">
                 <p>&copy; Esteban Solis Loya. All Rights Reserved. 2020</p>
             </div>
         </footer>
