embedded map, added anchor tags, and added finishing touches

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         </div>
 
         <under class="youtubedesc">
-            <p>This is an old Zorro movie. I haven't wathed it because it looks borning, but it's probaby okay for an old black-and-white movie. I'm just filling in this paragraph because I can't think of anything substantive to put here, so I'm just going to type random sentences. Reptilians are hiding in the nostrils on Mount Rushmore and will take over the world with robot dinosaurs. I am actually a small alien standing on the shoulders of another small alien in a tranchcoat.</p>
+            <p>This is an old Zorro movie. I haven't watched it because it looks borning, but it's probaby okay for an old black-and-white movie. I'm just filling in this paragraph because I can't think of anything substantive to put here, so I'm just going to type random sentences. Reptilians are hiding in the nostrils on Mount Rushmore and will take over the world with robot dinosaurs. I am actually a small alien standing on the shoulders of another small alien in a tranchcoat.</p>
         </under>
         <under class="audiodesc">
             <p>If you like lightsabers, then you'll like this audio clip! It's a lightsaber.</p>
