--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,10 @@
             </form>
         </section>
 
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423286.2740855847!2d-118.69192293994551!3d34.020161300942476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1601159365662!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+
 <!-----------------------------------End of Boxes---------------->
         <footer class="footer">
             <div class="footer-col">
