--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
 <!---------------------------------Beginning of Nav------------------------------->
             <nav class="nav-bar">
-                <img class="logo" src="img/logo.jpg" alt="Zorro logo"/>
+                <a href="index.html"><img class="logo" src="img/logo.jpg" alt="Zorro logo"/></a>
                 <ul class="nav-list">
                     <li class="list-items"><a href="index.html" target="_blank">Home</a></li>
                     <li class="list-items"><a href="about.html" target="_blank">About</a></li>  
@@ -32,7 +32,7 @@
         <section class="row">
             <div class="column">
                 <div class="box col-box1">
-                    <img class="tornado" src="img/tornado.jpg" alt="Zorro and Tornado">
+                    <a href="https://zorro.fandom.com/wiki/Tornado" target="_blank"><img class="tornado" src="img/tornado.jpg" alt="Zorro and Tornado"></a>
                 </div>
                 <div class="box col-box2">
                     <img class="mistress" src="img/mistress.jpg" alt="Zorro and Tornado breaking into a library">
